# cppStudyHM

./: CMakeLists.txt  LICENSE  README.md
include/: 03-MyArray.hpp
src/: 02-bubbleSort.cpp  03-MyArray.cpp  04-listExample.cpp  06-testenum.cpp  07-testmap.cpp  08-testint2f.cpp  MyArray.hpp  MyArray_test.cpp
src/05-speech/: main.cpp  speaker.h  speechManager.cpp  speechManager.h
